Node_Microservices/Day-8/Blogs/k8s/posts-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: posts
spec:
  containers:
    - name: posts
      image: rahul/posts
      imagePullPolicy: "Never"
