Node_Microservices/Day-8/Blogs/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels: 
        app: client
    spec:
      containers:
        - name: client
          image: rahul0395/client:latest

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv-cl-ip
spec: 
  selector: 
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
