Node_Microservices/Day-8/Blogs/k8s/eventbus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: eventbus-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels: 
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: rahul0395/eventbus:latest

---

apiVersion: v1
kind: Service
metadata:
  name: eventbus-srv-cl-ip
spec: 
  selector: 
    app: eventbus
  ports:
    - name: eventbus
      protocol: TCP
      port: 4005
      targetPort: 4005
