Node_Microservices/Day-8/Blogs/k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: posts-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels: 
        app: posts
    spec:
      containers:
        - name: posts
          image: rahul0395/posts:latest

---

apiVersion: v1
kind: Service
metadata:
  name: post-srv-cl-ip
spec: 
  selector: 
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
