Node_Microservices/Day-8/Blogs/k8s/posts-node-port-serv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: posts-srv-node-port
spec:
  type: NodePort
  selector: 
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
