Node_Microservices/Day-8/Blogs/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels: 
        app: query
    spec:
      containers:
        - name: query
          image: rahul0395/query:latest

---

apiVersion: v1
kind: Service
metadata:
  name: query-srv-cl-ip
spec: 
  selector: 
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
